--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Don Zarrillo Jr.",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
