--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Online web development coding exams",
   "main": "server.js",
   "scripts": {
+    "startDev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.7",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
