--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
+    "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "http-proxy-middleware": "^1.0.2"
   }
 }
